# VaultMind

./: .gitignore  LICENSE  README.md  env.example  main.py  pyproject.toml
vaultmind/: config.py
vaultmind/core/: models.py
vaultmind/infrastructure/: chunker.py  embedder.py  repository.py  store.py  watcher.py
vaultmind/services/: indexer.py
